--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,1 +1,19 @@
 image: ncbi/blast
+
+
+tasks:
+  - name: main terminal
+    command: |
+      rm Dockerfile
+      echo -e "# Snakemake-Tutorial\n\nYour gitpod workspace for the snakemake-tutorial has been initialized. Now you can start with the [basic tutorial](https://snakemake.readthedocs.io/en/stable/tutorial/basics.html)." > README.md
+      echo "PS1='\w\$ '" >> ~/.bashrc
+      source ~/.bashrc
+      echo "*" > .gitignore
+      conda activate blast
+      clear
+
+vscode:
+  extensions:
+    - snakemake.snakemake-lang
+    - ms-toolsai.jupyter
+    - sndst00m.vscode-native-svg-preview
